<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string><string name="app_name">Brick Smash!</string>
    <string name="action_settings">Settings</string>
    
    <string name="action_pause">Pause</string><string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="game_over">Game Over.</string>
    <string name="ok_button">OK</string>
    <string name="action_reset">Reset</string>
    <string name="action_restart">Restart</string>
    <string name="player_life1">Life 1</string>
    <string name="player_life2">Life 2</string>
    <string name="player_life3">Life 3</string>
    <string name="player_life4">Life 4</string>
    <string name="player_life5">Life 5</string>
    <string name="player_life6">Life 6</string>
    

</resources>
