<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_title"
    android:layoutMode="clipBounds" >

    <ImageView
        android:id="@+id/player_life1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/player_life1"
        android:src="@drawable/life" />

    <ImageView
        android:id="@+id/player_life2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/player_life1"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/player_life1"
        android:contentDescription="@string/player_life2"
        android:src="@drawable/life" />

    <ImageView
        android:id="@+id/player_life3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/player_life2"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/player_life2"
        android:contentDescription="@string/player_life3"
        android:src="@drawable/life" />
    
    <ImageView
        android:id="@+id/player_life4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/player_life3"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/player_life3"
        android:contentDescription="@string/player_life4"
        android:src="@drawable/life" />
    
    <ImageView
        android:id="@+id/player_life5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/player_life4"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/player_life4"
        android:contentDescription="@string/player_life5"
        android:src="@drawable/life" />
    
    <ImageView
        android:id="@+id/player_life6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/player_life5"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/player_life5"
        android:contentDescription="@string/player_life6"
        android:src="@drawable/life" />

</RelativeLayout>
